<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent" android:layout_height="wrap_content"
        tools:context="com.itemhunter.main.NewHunt">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/new_hunt"
        android:id="@+id/titleText"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/search_text"
        android:id="@+id/priceText"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="20dp"
        android:layout_below="@+id/titleText" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/searchText"
        android:inputType="textMultiLine"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginRight="10dp"
        android:layout_toEndOf="@+id/priceText"
        android:layout_marginLeft="10dp"
        android:layout_below="@+id/priceText"
        android:layout_alignParentStart="true"
        android:maxLines="2"
        android:lines="2"
        android:linksClickable="false"
        android:maxLength="80" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/price_text"
        android:id="@+id/locationText"
        android:layout_below="@+id/searchText"
        android:layout_alignLeft="@+id/priceText"
        android:layout_alignStart="@+id/priceText"
        android:layout_marginTop="10dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/dollar"
        android:id="@+id/textView4"
        android:layout_alignTop="@+id/locationText"
        android:layout_toRightOf="@+id/locationText"
        android:layout_marginLeft="30dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/maxPrice"
        android:layout_alignBottom="@+id/textView4"
        android:layout_toEndOf="@+id/textView4"
        android:layout_marginLeft="2dp"
        android:maxLines="1"
        android:maxLength="9"
        android:layout_toLeftOf="@+id/textView5"
        android:inputType="text" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/maximum"
        android:id="@+id/textView5"
        android:layout_alignBottom="@+id/maxPrice"
        android:layout_marginLeft="6dp"
        android:layout_alignParentEnd="true"
        android:layout_marginRight="10dp" />

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/websitespin"
        android:layout_alignTop="@+id/textView6"
        android:layout_toRightOf="@+id/textView4"
        android:layout_toEndOf="@+id/textView4"
        android:layout_alignRight="@+id/maxPrice"
        android:layout_alignEnd="@+id/maxPrice" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/website"
        android:id="@+id/textView6"
        android:layout_alignLeft="@+id/locationText"
        android:layout_alignStart="@+id/locationText"
        android:layout_below="@+id/locationText"
        android:layout_marginTop="10dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/myLoc_text"
        android:id="@+id/textView7"
        android:layout_below="@+id/websitespin"
        android:layout_alignLeft="@+id/textView6"
        android:layout_alignStart="@+id/textView6" />

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/locationspin"
        android:layout_toStartOf="@+id/textView5"
        android:layout_alignTop="@+id/textView7"
        android:layout_alignLeft="@+id/maxPrice"
        android:layout_alignStart="@+id/maxPrice" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_loc"
        android:id="@+id/button"
        android:layout_toEndOf="@+id/locationspin"
        android:textSize="10sp"
        android:layout_alignBottom="@+id/locationspin"
        android:layout_toRightOf="@+id/locationspin"
        android:onClick="editLocations"
        android:singleLine="false" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/more_options"
        android:id="@+id/textView8"
        android:layout_below="@+id/locationspin"
        android:layout_alignLeft="@+id/textView7"
        android:layout_alignStart="@+id/textView7"
        android:layout_marginTop="10dp"
        android:width="115dp"
        android:visibility="visible" />

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/moreOptBut"
        android:background="@drawable/plussign"
        android:minHeight="25dp"
        android:minWidth="25dp"
        android:contentDescription="Plus Sign"
        android:onClick="showMore"
        android:layout_alignTop="@+id/textView8"
        android:layout_toRightOf="@+id/textView8"
        android:layout_marginLeft="15dp" />

    <ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fillViewport="true"
        android:layout_below="@+id/textView8"
        android:layout_above="@+id/cancel"
        android:layout_marginTop="5dp"
        android:id="@+id/moreOptsScroll"
        android:visibility="gone">



    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:visibility="visible"
        android:id="@+id/moreOpts">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/price_text"
            android:id="@+id/textView9"
            android:layout_alignBottom="@+id/minPrice"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="false"
            android:layout_marginLeft="10dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/dollar"
            android:id="@+id/textView10"
            android:layout_toEndOf="@+id/textView9"
            android:layout_alignBottom="@+id/textView9"
            android:layout_toRightOf="@+id/textView9"
            android:layout_marginLeft="30dp" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/minPrice"
            android:layout_toEndOf="@+id/textView10"
            android:maxLines="1"
            android:maxLength="9"
            android:inputType="text"
            android:layout_toStartOf="@+id/textView11"
            android:layout_alignParentTop="true"
            android:layout_alignLeft="@+id/editText2"
            android:layout_alignStart="@+id/editText2" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/minimum"
            android:id="@+id/textView11"
            android:layout_alignBottom="@+id/minPrice"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="6dp"
            android:textSize="12sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/searchType"
            android:id="@+id/textView12"
            android:layout_below="@+id/textView11"
            android:layout_alignLeft="@+id/textView9"
            android:layout_alignStart="@+id/textView9"
            android:layout_marginTop="10dp"
            android:layout_marginRight="5dp" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/auction"
            android:id="@+id/auctionRadio"
            android:layout_toEndOf="@+id/textView12"
            android:textSize="12sp"
            android:layout_alignTop="@+id/textView12"
            android:layout_toRightOf="@+id/textView12"
            android:checked="true" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fixed_price"
            android:id="@+id/radioButton3"
            android:textSize="12sp"
            android:layout_toEndOf="@+id/auctionRadio"
            android:checked="false"
            android:enabled="true"
            android:layout_above="@+id/textView13"
            android:layout_alignEnd="@+id/minPrice" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/pingEvery"
            android:id="@+id/textView13"
            android:layout_below="@+id/auctionRadio"
            android:layout_alignLeft="@+id/textView12"
            android:layout_alignStart="@+id/textView12"
            android:layout_marginTop="10dp" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/editText2"
            android:layout_toEndOf="@+id/textView13"
            android:width="150dp"
            android:inputType="number"
            android:maxLines="1"
            android:maxLength="3"
            android:layout_alignBottom="@+id/textView13"
            android:layout_alignEnd="@+id/auctionRadio" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/minutes"
            android:id="@+id/textView14"
            android:textSize="12sp"
            android:layout_alignBottom="@+id/textView13"
            android:layout_alignStart="@+id/radioButton3"
            android:layout_marginLeft="10dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/notifTypes"
            android:id="@+id/textView15"
            android:layout_below="@+id/textView13"
            android:layout_alignLeft="@+id/textView13"
            android:layout_alignStart="@+id/textView13"
            android:layout_marginTop="10dp"
            android:layout_marginRight="5dp" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/push"
            android:id="@+id/radioButton4"
            android:layout_toEndOf="@+id/textView15"
            android:textSize="12sp"
            android:layout_alignBottom="@+id/textView15"
            android:layout_toRightOf="@+id/textView15"
            android:checked="true" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:id="@+id/radioButton5"
            android:layout_toEndOf="@+id/radioButton4"
            android:textSize="12sp"
            android:layout_toRightOf="@+id/radioButton4"
            android:layout_alignBottom="@+id/radioButton4" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/onlySearchWifi_text"
            android:id="@+id/textView16"
            android:layout_below="@+id/textView15"
            android:layout_alignLeft="@+id/textView15"
            android:layout_alignStart="@+id/textView15"
            android:layout_marginTop="10dp" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/wifi_true"
            android:id="@+id/radioButton6"
            android:textSize="12sp"
            android:layout_toStartOf="@+id/radioButton5"
            android:layout_below="@+id/textView15"
            android:layout_toRightOf="@+id/textView15"
            android:layout_toEndOf="@+id/textView15" />

    </RelativeLayout>
    </ScrollView>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/home"
        android:id="@+id/cancel"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="2dp"
        android:onClick="goHome" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create"
        android:id="@+id/button3"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="2dp"
        android:layout_marginLeft="10dp"
        android:onClick="callHuntNamer" />
</RelativeLayout>
